--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.0",
     "ts-node-dev": "^1.0.0-pre.43",
